remodularize + add gradle jlink plugin